Fix prompt dialog overflow

--- a/sass/gnome-shell-sass/_common.scss
+++ b/sass/gnome-shell-sass/_common.scss
@@ -239,22 +239,21 @@ StScrollBar {
   background-color: $bg_color;
   border: 0;
   box-shadow: 0 2px 8px 0 transparentize(#000, .6);
-  .modal-dialog-content-box {
-    padding: 2.4em;
-  }
   StEntry {
-    width: 20em;
-    margin-bottom: .43em;
-    background-color: rgba($secondary_color, .05);
+    background-color: rgba($secondary_color, if($variant=='light', .05, .15));
     background-gradient-direction: none;
     box-shadow: none;
     border: none;
     color: $dark_font_color;
     border-radius: 6px;
   }
+  .modal-dialog-content-box {
+    padding: 2.4em;
+  }
+  .run-dialog-entry { width: 20em; margin-bottom: .41em; }
   .run-dialog-error-box {
-    padding-top: 1.45em;
-    spacing: .54em;
+    padding-top: 1.09em;
+    spacing: .41em;
   }
   .run-dialog-button-box {
     padding-top: 1em;
@@ -1531,8 +1530,8 @@ StScrollBar {
   caret-color: #000;
   caret-size: .1em;
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.9);
-  font-weight: bold;
   background-color: rgba(255, 255, 255, 0.2);
+  font-weight: bold;
   background-gradient-direction: none;
   padding: .63em .81em;
   border-radius: 100px;
@@ -1540,6 +1539,7 @@ StScrollBar {
   transition-duration: 200ms;
   font-size: 1.1em;
   &:focus, &:hover {
+    font-weight: 400;
     background-color: #FFF;
     color: #000;
     box-shadow: none;
